<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Classtable</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="course">我的课程表</string>
    <string name="start">开始</string>
    <string name="d1">第一节</string>
    <string name="d2">第二节</string>
    <string name="d3">第三节</string>
    <string name="d4">第四节</string>
    <string name="d5">第五节</string>
    <string name="d6">第六节</string>
    <string name="d7">第七节</string>
    <string name="d8">第八节</string>
    <string name="d9">第九节</string>
    <string name="d10">第十节</string>
    <string name="d11">第十一节</string>
    <string name="d12">第十二节</string>
    <string name="xq1">周一</string>
    <string name="xq2">周二</string>
    <string name="xq3">周三</string>
    <string name="xq4">周四</string>
    <string name="xq5">周五</string>
    <string name="xq6">周六</string>
    <string name="xq7">周日</string>
    <string name="name">课程名称</string>
    <string name="rom">课室</string>
    <string name="day">星期</string>
    <string name="start_point">开始</string>
    <string name="end_point">结束</string>
    <string name="confirm">确认</string>
    <string name="d13">第十三节</string>
    <string name="d14">第十四节</string>
    <string name="add">添加</string>

</resources>
