<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    
    tools:context=".MainActivity" >
    
      
      <!--主界面 -->	  
       
       <com.example.classtable.SlidingLayout
            android:id="@+id/slidingLayout"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:orientation="horizontal">
       
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/leftmenuback"
            android:orientation="vertical" >

        <ListView  
            android:id="@+id/list1"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="25dp"
             android:layout_marginLeft="22dp"
             android:layout_marginRight="22dp"
             android:listSelector="@drawable/sideitempress"
              >
       </ListView>

       

    </RelativeLayout>
    
    <LinearLayout
    android:id="@+id/layoutcourse"
    android:layout_width="wrap_content"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#f5f5dd"
    >
     <RelativeLayout
        android:layout_height="50dp"
        android:layout_width="fill_parent"
        android:orientation="horizontal"
        android:background="#d3d3d3"
        >
        <TextView 
            android:id="@+id/title"
            android:layout_centerHorizontal="true" 
            android:paddingTop="5dp"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:text="@string/course"
            android:textSize="23sp"
            android:textColor="#666666"
            android:paddingBottom="5dp"
            />

        <Button
            android:id="@+id/set"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:background="@drawable/set"
           
            />
    
      <Button
          android:id="@+id/add"
          android:layout_width="50dp"
          android:layout_height="50dp"
          android:layout_alignParentLeft="true"
          android:layout_alignParentTop="true"
          android:background="@drawable/fly" />

        </RelativeLayout> 
 <ScrollView 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"	
	
	>
<!-- 定义HorizontalScrollView，为里面的组件添加水平滚动条 -->	
<HorizontalScrollView
	android:layout_width="fill_parent" 
	android:layout_height="wrap_content"
	>
	<LinearLayout 
	    android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="horizontal">
		<LinearLayout 
	    	android:layout_width="30dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingLeft="3dp"
			android:paddingRight="3dp"
			android:orientation="vertical">

			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:background="#00000000"
			    android:gravity="center"
			    android:padding="5dp"
			    android:text="0"
			    android:textColor="#00000000"
			    android:textSize="15sp" />

			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:background="#f6e1a0"
			    android:text="@string/d1"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d2"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:background="#f6e1a0"
			    android:text="@string/d3"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d4"/>			
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:background="#f6e1a0"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d5"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d6"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:background="#f6e1a0"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d7"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d8"/>	
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:background="#f6e1a0"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d9"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d10"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:background="#f6e1a0"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d11"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d12"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d13"/>
			<TextView
			    android:layout_width="fill_parent"
			    android:layout_height="50dp"
			    android:textColor="#666666"
			    android:textSize="12sp"
			    android:gravity="center"
			    android:text="@string/d14"/>			
		</LinearLayout>
	    <LinearLayout 
	        android:id="@+id/ll1"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"			
			android:paddingTop="5dp"
			android:paddingBottom="5dp"			
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#f6e1a0"
		    android:padding="5dp"
		    android:textColor="#666666"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq1"
		    />
		</LinearLayout>
	    <LinearLayout 
	        android:id="@+id/ll2"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"			
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:padding="5dp"
		    android:textColor="#666666"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq2"
		    />
		</LinearLayout>
	    <LinearLayout 
	        android:id="@+id/ll3"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"		
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#f6e1a0"
		    android:padding="5dp"
		    android:textColor="#666666"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq3"
		    />		
		</LinearLayout>
	    <LinearLayout 
	        android:id="@+id/ll4"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"			
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"		    
		    android:padding="5dp"
		    android:textColor="#666666"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq4"
		    />		
		</LinearLayout>
	    <LinearLayout 
	        android:id="@+id/ll5"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"		
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#f6e1a0"
		    android:padding="5dp"
		    android:textColor="#666666"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq5"
		    />	
		</LinearLayout>
	   	<LinearLayout 
	        android:id="@+id/ll6"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"   
		    android:padding="5dp"
		    android:textColor="#666666"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq6"
		    />
		</LinearLayout>			
	    <LinearLayout 
	        android:id="@+id/ll7"
	    	android:layout_width="100dp" 
			android:layout_height="wrap_content"
			android:paddingTop="5dp"
			android:paddingBottom="5dp"
			android:paddingRight="3dp"
			android:orientation="vertical">
		<TextView 
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:background="#f6e1a0"
		    android:textColor="#666666"
		    android:padding="5dp"
		    android:textSize="15sp"
		    android:gravity="center"
		    android:text="@string/xq7"
		    />
		</LinearLayout>		    	    	    	    
	</LinearLayout>
</HorizontalScrollView>
</ScrollView>
  </LinearLayout>
  
        </com.example.classtable.SlidingLayout>
    
 </LinearLayout>